Add new dividers and update section  colors

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             <p>Looking for an engineer to help round out your game dev team? Feel free to reach out.  Although engineering is my core domain this portfolio represents a journey of my creativity and technical skills spanning from art to game development and beyond . Enjoy exploring!</p>
           </div>
         </div>
-        <div class="headshot-container">
+        <div class="headshot-container animate">
           <img class="headshot" src="src/images/headshot.jpg" alt="headshot pic"/>
         </div>
       </section>
       <div class="divider2">
-        <img class="divider2-img" src="src/images/Divider2.png" width="100%"/>
+        <img src="src/images/Divider2.png" width="100%"/>
       </div>
       <section class="how-i-work" id="howiwork">
         <!-- <h2>how i work</h2> -->
@@ -68,6 +68,10 @@
             You have the idea and the vision & I'll sweat the details to bring that vision to life. A pleasurable user experience isn't just about the flashy animations. It's about an intuitive end to end experience. It'd about making sure that in the short time someone is on your site there is a positive impression that leads them to bring their friends back next time! 
           </p>
           </div>
+    
+        </div>
+        <div class="divider3">
+            <img  src="src/images/Divider3.png" width="100%"/>
         </div>
 
          <div class="howiwork-container2">
@@ -77,7 +81,9 @@
           <p> Every project has its own unique challenges. I take a structured & detailed approach to building up your website from day one y using industry standard product management tools to make sure every one involved is in the loop & that the timelines are open & honest.</p>
           </div>
         </div>
-
+        <div class="divider4">
+          <img src="src/images/Divider4.png" width="100%"/>
+        </div>
          <div class="howiwork-container3">
           <img src="src/images/growth.png"/>
           <div class="howiwork-text">
@@ -111,5 +117,6 @@
       </div>
     </footer>
 	<script src="lib/hamburgerFunc.js"></script>
+	<script src="lib/inViewAnimation.js"></script>
   </body>
 </html>
